--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,45 +1,47 @@
-
-<hr>
+<hr />
 <footer>
-    <img src="/logo_sort.png" alt="pompette" class="pompette_logo_black">
-        <p>CONTACT US <br> To get in touch, visit our contact page or write us at support@pompette.dk <br>
-        For employment opportunities, see our current vacancies</p>
-    <p>OPENING HOURS <br> all day <br> 12am - 12pm
-    <br><br>
-     NO RESERVATIONS </p>
+  <img src="/logo_sort.png" alt="pompette" class="pompette_logo_black" />
+  <p>
+    CONTACT US <br /> To get in touch, visit our contact page or write us at support@pompette.dk <br />
+    For employment opportunities, see our current vacancies
+  </p>
+  <p>
+    OPENING HOURS <br /> all day <br /> 12am - 12pm
+    <br /><br />
+    NO RESERVATIONS
+  </p>
 
-<p>SOCIALS <br> 
-<a target="_blank" href="https://www.instagram.com/pompettecph/">INSTAGRAM</a> <br>
-<a target="_blank" href="https://www.facebook.com/pompettecph">FACEBOOK</a>
-</p>
-
+  <p>
+    SOCIALS <br />
+    <a target="_blank" href="https://www.instagram.com/pompettecph/">INSTAGRAM</a>
+    <br />
+    <a target="_blank" href="https://www.facebook.com/pompettecph">FACEBOOK</a>
+  </p>
 </footer>
 
 <style>
-    hr{
-        color: black;
-        margin-bottom: 0%;
-    }
-    footer {
-        display: grid;
-        grid-template-columns: 1.5fr 2fr 1fr 1fr;
-        background-color: #F3F3EB;
-        padding: 3em;
-        font-family: 'Poppins', sans-serif;
-        font-weight: 300;
-        text-align: center;
-        gap: 5rem;
-      
-    }
-    .pompette_logo_black {
-        width: 90%;
- 
-    }
-    a {
-        color: black;
-        text-decoration: none;
-    }
-    a:hover {
-        color: #FF0000;
-    }
+  hr {
+    color: black;
+    margin-bottom: 0%;
+  }
+  footer {
+    display: grid;
+    grid-template-columns: 1.5fr 2fr 1fr 1fr;
+    background-color: #f3f3eb;
+    padding: 3em;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    text-align: center;
+    gap: 5rem;
+  }
+  .pompette_logo_black {
+    width: 90%;
+  }
+  a {
+    color: black;
+    text-decoration: none;
+  }
+  a:hover {
+    color: #ff0000;
+  }
 </style>
