--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,86 +1,107 @@
-<nav>
-    <img src="/logo_roed.png" alt="pompette">
-    <ul>
-        <li>
-            <div class="dropdown">
-<button class="dropbtn"> <a href="">Shop</a></button>
-<div class="dropdown-content">
-    <a href="">Wine</a>
-    <a href="">Not wine</a>
-</div>
-</div>
-        </li>
-        <li>
-            <a href="">The Bar</a>
-        </li>
-        <div class="dropdown">
-            <button class="dropbtn"> <a href="">About Us</a></button>
-            <div class="dropdown-content">
-                <a href="">The Concept</a>
-                <a href="">The Winemakers</a>
-                <a href="">The People</a>
-            </div>
-            </div>
-       
-    </ul>
+<nav class="navbar">
+  <img src="/logo_roed.png" alt="pompette" />
+  <ul>
+    <li>
+      <div class="dropdown">
+        <button class="dropbtn"> <a href="">Shop</a></button>
+        <div class="dropdown-content">
+          <a href="">Wine</a>
+          <a href="">Not wine</a>
+        </div>
+      </div>
+    </li>
+    <li>
+      <a href="">The Bar</a>
+    </li>
+    <div class="dropdown">
+      <button class="dropbtn"> <a href="">About Us</a></button>
+      <div class="dropdown-content">
+        <a href="">The Concept</a>
+        <a href="">The Winemakers</a>
+        <a href="">The People</a>
+      </div>
+    </div>
+  </ul>
 </nav>
 
 <style>
-    nav {
-        display: grid;
-        grid-template-columns: 5fr 3fr;
-        padding: 2em;
-    }
-    img{
-        width: 25%;
-    }
+  .navbar {
+    position: sticky;
+    top: 0;
+    background-color: white;
+    padding-left: 30px;
+    z-index: 100;
+  }
+  nav {
+    display: grid;
+    grid-template-columns: 5fr 3fr;
+    padding: 2em;
+  }
+  img {
+    width: 25%;
+  }
 
-    ul { 
+  ul {
     display: flex;
     list-style: none;
     justify-content: space-between;
     margin-right: 5%;
-    }
+  }
 
-    a {
-        text-decoration: none;
-        color: #FF0000;
-        font-family: 'Poppins', sans-serif;
-        font-weight: 300;
-        font-size: 16px;
-    }
-a:hover {
-    color:  black;
-}
-    /* Dropdown Button */
-.dropbtn {
-color: #FF0000;
-font-family: 'Poppins', sans-serif;
-font-weight: 300;
-border: none;
-background-color: white;
-font-size: 16px;
-}
-.dropdown {
-  position:relative;
-  display: inline-block;
-}
-.dropdown-content {
-  display: none;
-  position: absolute;
-  min-width: 160px;
-  z-index: 1;
-}
-.dropdown-content a {
-  color: rgb(195, 195, 195);
-  text-decoration: none;
-  display: block;
-  margin-left: 1%;
-}
+  a {
+    text-decoration: none;
+    color: #ff0000;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+  }
+  a:hover {
+    color: black;
+  }
+  /* Dropdown Button */
+  .dropbtn {
+    color: #ff0000;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    border: none;
+    background-color: white;
+    font-size: 16px;
+  }
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    z-index: 1;
+  }
+  .dropdown-content a {
+    color: rgb(195, 195, 195);
+    text-decoration: none;
+    display: block;
+    margin-left: 1%;
+  }
 
-.dropdown-content a:hover {color:  black;}
+  .dropdown-content a:hover {
+    color: black;
+  }
 
-.dropdown:hover .dropdown-content {display: block;}
-
-
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 </style>
+<script>
+  // JavaScript to add/remove a CSS class for sticky behavior
+  window.addEventListener("scroll", function () {
+    var navbar = document.querySelector(".navbar");
+    var scrollPosition = window.pageYOffset;
+
+    if (scrollPosition > 0) {
+      navbar.classList.add("sticky");
+    } else {
+      navbar.classList.remove("sticky");
+    }
+  });
+</script>
