Opdateret the bar mobile

--- a/src/pages/thebar.astro
+++ b/src/pages/thebar.astro
@@ -17,7 +17,16 @@
         <p> Located in the heart of Denmark, Pompette offers a captivating atmosphere where wine enthusiasts can indulge in a carefully curated selection of exceptional wines. The warm and inviting ambiance, combined with attentive service, creates an enchanting space where guests can enjoy their favorite wines or explore new and exciting flavors. Whether you're seeking a memorable evening out or a place to unwind with friends, Pompette promises an extraordinary experience for all wine lovers.</p>
         <img class="thebar" src="../../public/TheBar-Image.png" alt="Image inside the wine bar" />
     </div>
-    </main>
+    <div class="winemenu">
+<h1>Wine and Menu</h1>
+<p>Discover a world of flavors through our carefully curated wines at our wine bar. From bold reds to crisp whites and everything in between. Accompanying the exceptional wines is a small, but very tasty, menu designed to enhance the tasting experience, featuring artisanal cheeses, charcuterie boards, and delectable tapas inspired by global cuisines. Whether you're a wine connoisseur or a curious beginner, Pompette offers an unforgettable journey of taste and pleasure.</p>
+</div>
+<!-- <div class="tellmemore_button">
+<a href="">Tell me more</a>
+</div> -->
+<h2>“Keep it accessible for all people, keep it simple, and keep it at a good price” 
+</h1>
+</main>
 </body>
 
 <style>
@@ -26,6 +35,13 @@
 margin: 0;
 padding: 0;
 }
+
+/* .tellmemore_button
+{background-image: url('../../public/tellmemore.png');
+background-size:auto;
+background-repeat: no-repeat;
+max-width: 100%;
+} */
 
 @media only screen and (max-width: 800px) {
 
@@ -41,13 +57,25 @@ padding: 5%;
 
 .thebar{max-width: 100%;}
 
+.winemenu{padding: 5%;}
+
 }
 
-h1, h2 {font-family: athena,sans-serif;
+h1{font-family: athena,sans-serif;
 font-weight: 600;
 font-style: normal;
 font-size: 45px;
 }
+
+h2 {font-family: athena,sans-serif;
+font-weight: 300;
+font-style: normal;
+font-size: 30px;
+color: #FF0000;
+padding: 5%;
+}
+
+
 
 p {font-family: century-gothic,sans-serif;
 font-weight: 400;
