--- a/src/pages/thebar.astro
+++ b/src/pages/thebar.astro
@@ -21,11 +21,14 @@
 <h1>Wine and Menu</h1>
 <p>Discover a world of flavors through our carefully curated wines at our wine bar. From bold reds to crisp whites and everything in between. Accompanying the exceptional wines is a small, but very tasty, menu designed to enhance the tasting experience, featuring artisanal cheeses, charcuterie boards, and delectable tapas inspired by global cuisines. Whether you're a wine connoisseur or a curious beginner, Pompette offers an unforgettable journey of taste and pleasure.</p>
 </div>
+<button>Tell me more</button>
 <!-- <div class="tellmemore_button">
 <a href="">Tell me more</a>
 </div> -->
-<h2>“Keep it accessible for all people, keep it simple, and keep it at a good price” 
-</h1>
+<div>
+<img class="citation" src="../../public/citation.png" alt="">
+<h2>“Keep it accessible for all people, keep it simple, and keep it at a good price”</h2>
+</div>
 <section class="center_grid">
 <div class="image_grid">
     <img class="grid_images" src="../../public/thebar_1.jpg" alt="Girl enjoying wine and snacks">
@@ -79,10 +82,14 @@ align-items: center;
 display: grid;
 grid-template-columns: 1fr 1fr;
 gap: 10px;
-max-width: 80%;
+max-width: 70%;
 }
 .grid_images{
 max-width: 100%;
+}
+
+.citation{
+padding-left: 5%;
 }
 
 }
@@ -100,7 +107,9 @@ font-weight: 300;
 font-style: normal;
 font-size: 30px;
 color: #FF0000;
-padding: 5%;
+padding-left: 5%;
+padding-right: 5%;
+padding-bottom: 5%;
 }
 
 
