--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,28 +1,37 @@
-<nav class="navbar">
-  <img src="/logo_roed.png" alt="pompette" />
-  <ul>
-    <li>
-      <div class="dropdown">
-        <button class="dropbtn"> <a href="">Shop</a></button>
-        <div class="dropdown-content">
-          <a href="">Wine</a>
-          <a href="">Not wine</a>
+<header class="header">
+  <nav class="navbar">
+    <img src="/logo_roed.png" alt="pompette" />
+    <ul class="nav-menu">
+      <li class="nav-item">
+        <div class="dropdown">
+          <button class="dropbtn"> <a href="">Shop</a></button>
+          <div class="dropdown-content">
+            <a href="">Wine</a>
+            <a href="">Not wine</a>
+          </div>
         </div>
-      </div>
-    </li>
-    <li>
-      <a href="">The Bar</a>
-    </li>
-    <div class="dropdown">
-      <button class="dropbtn"> <a href="">About Us</a></button>
-      <div class="dropdown-content">
-        <a href="">The Concept</a>
-        <a href="">The Winemakers</a>
-        <a href="">The People</a>
-      </div>
+      </li>
+      <li class="nav-item">
+        <a href="">The Bar</a>
+      </li>
+      <li class="nav-item">
+        <div class="dropdown">
+          <button class="dropbtn"> <a href="">About Us</a></button>
+          <div class="dropdown-content">
+            <a href="">The Concept</a>
+            <a href="">The Winemakers</a>
+            <a href="">The People</a>
+          </div>
+        </div>
+      </li>
+    </ul>
+    <div class="hamburger">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
     </div>
-  </ul>
-</nav>
+  </nav>
+</header>
 
 <style>
   .navbar {
@@ -61,8 +70,9 @@
   /* Dropdown Button */
   .dropbtn {
     color: #ff0000;
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
+    font-family: century-gothic, sans-serif;
+    font-weight: 400;
+    font-style: normal;
     border: none;
     background-color: white;
     font-size: 16px;
@@ -91,6 +101,62 @@
   .dropdown:hover .dropdown-content {
     display: block;
   }
+  .hamburger {
+    display: none;
+  }
+
+  .bar {
+    display: block;
+    width: 35px;
+    height: 2px;
+    margin: 7px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #ff0000;
+  }
+  @media only screen and (max-width: 700px) {
+    img {
+      width: 60%;
+    }
+    .nav-menu {
+      position: fixed;
+      left: -150%;
+      top: 1rem;
+      flex-direction: column;
+      background-color: #f3f3eb;
+      width: 100%;
+      text-align: center;
+      transition: 0.3s;
+    }
+    .dropbtn {
+      background-color: #f3f3eb;
+    }
+    .nav-menu.active {
+      left: 0;
+    }
+
+    .nav-item {
+      margin: 2rem 5rem 1rem 0rem;
+    }
+
+    .hamburger {
+      display: block;
+      cursor: pointer;
+      margin-top: 5%;
+      margin-left: 50%;
+    }
+    .hamburger.active .bar:nth-child(2) {
+      opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+      transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+      transform: translateY(-8px) rotate(-45deg);
+    }
+  }
 </style>
 <script>
   // JavaScript to add/remove a CSS class for sticky behavior
@@ -104,4 +170,22 @@
       navbar.classList.remove("sticky");
     }
   });
+  const hamburger = document.querySelector(".hamburger");
+  const navMenu = document.querySelector(".nav-menu");
+
+  hamburger.addEventListener("click", mobileMenu);
+
+  function mobileMenu() {
+    hamburger.classList.toggle("active");
+    navMenu.classList.toggle("active");
+  }
+
+  const navLink = document.querySelectorAll(".nav-link");
+
+  navLink.forEach((n) => n.addEventListener("click", closeMenu));
+
+  function closeMenu() {
+    hamburger.classList.remove("active");
+    navMenu.classList.remove("active");
+  }
 </script>
