--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -29,8 +29,9 @@
     grid-template-columns: 1.5fr 2fr 1fr 1fr;
     background-color: #f3f3eb;
     padding: 3em;
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
+    font-family: century-gothic, sans-serif;
+    font-weight: 400;
+    font-style: normal;
     text-align: center;
     gap: 5rem;
   }
@@ -43,5 +44,15 @@
   }
   a:hover {
     color: #ff0000;
+  }
+  @media only screen and (max-width: 700px) {
+    footer {
+      grid-template-columns: 1fr;
+      justify-items: center;
+      gap: 0.5rem;
+    }
+    .pompette_logo_black {
+      width: 50%;
+    }
   }
 </style>
