--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,37 +10,347 @@ import Footer from "../components/Footer.astro";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>Astro</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css" />
   </head>
   <body>
     <Header />
     <main>
-      <h1>hej</h1>
-      <h1>hej</h1>
-      <h1>hej</h1>
-      <h1>hej</h1>
-      <h1>hej</h1>
+      <div class="grid">
+        <p class="aabningstider">Open Daily <br /> 12:00-00:00</p>
 
-      <img id="my-image" class="rotate-image" src="public/Pompette_pig 3.png" alt="pompette_bottles" />
-      <h1>hej</h1>
-      <h1>hej</h1>
-      <h1>hej</h1>
-      <h1>hej</h1>
-      <h1>hej</h1>
+        <p class="no_res">No reservations</p>
+
+        <p class="adresse">Møllegade 3 <br /> 2200 København <br /> Denmark</p>
+      </div>
+      <div class="grid_1_5_1">
+        <video class="hero-video" playsinline autoplay muted loop src="/forsidevideo.mp4"></video>
+      </div>
+      <img id="my-image2" class="rotate-image2" src="/Pompette_pig2.png" alt="pompette_bottles" />
+      <h1>“Natural wine <br /> for the people”</h1>
+      <p class="brodtekst">We are a small wine shop and wine bar located in Nørrebro in Copenhagen. We opened in the summer of 2018. We hoped to create a space to bring people together to enjoy a thing we all cared about: Natural wine.</p>
+      <img id="my-image" class="rotate-image" src="/Pompette_pig 3.png" alt="pompette_bottles" />
+      <div class="grid_desktop">
+        <div>
+          <div class="grid_1-1">
+            <img class="insta1" src="/insta1.png" alt="instagram" />
+            <img class="insta2" src="/insta2.png" alt="instagram" />
+          </div>
+          <div class="grid_1-1">
+            <img class="insta3" src="/insta3.png" alt="instagram" />
+            <img class="insta4" src="/insta4.png" alt="instagram" />
+          </div>
+        </div>
+        <div>
+          <h1 class="feeling">Feeling <em>"Pompette"</em>?</h1>
+          <div class="image-container">
+            <img class="insta_knap" src="/insta_knap.png" alt="instagram" />
+            <img class="hover" src="/insta_knap_hover.png" alt="instagram" />
+          </div>
+        </div>
+      </div>
+      <hr />
+      <p class="brodtekst2">Stay in the loop with POMPETTE neighbourhood news. We promise we’ll be in touch for exciting reasons only.</p>
+      <div class="grid_1-5-1">
+        <input type="text" placeholder="First name" />
+        <input type="text" placeholder="Last name" />
+        <input type="text" placeholder="Email" />
+        <button>Join Us</button>
+      </div>
+      <br />
     </main>
     <Footer />
   </body>
+
+  <style>
+    @media only screen and (max-width: 700px) {
+      .rotate-image {
+        transform-origin: center center;
+        transition: transform 0.2s;
+        margin: 3% 0% 10% 15%;
+        width: 70%;
+      }
+      .rotate-image2 {
+        display: none;
+      }
+      .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
+        background-color: #f3f3eb;
+        font-family: century-gothic, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        padding: 2%;
+        line-height: 1.5em;
+        z-index: -1;
+      }
+      .no_res {
+        grid-column: 1;
+        margin-top: -23%;
+      }
+      .aabningstider {
+        grid-column: 1;
+      }
+      .adresse {
+        grid-column: 2;
+        grid-row: 1;
+      }
+      .hero-video {
+        mask: url("/mask.svg") no-repeat center / contain;
+        -webkit-mask: url("/mask.svg") no-repeat center / contain;
+        width: 155%;
+        margin: -9% 0% -12% -27%;
+
+        z-index: 1;
+      }
+      h1 {
+        font-family: "athena", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        text-align: center;
+      }
+      p {
+        font-family: century-gothic, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        text-align: center;
+      }
+      .brodtekst {
+        margin: -3% 1% 15% 1%;
+      }
+      img {
+        max-width: 100%;
+      }
+      .insta1,
+      .insta2,
+      .insta3,
+      .insta4 {
+        width: 49%;
+      }
+      .image-container {
+        position: relative;
+        width: 150px;
+        height: 122px;
+        margin: 10% 0% 10% 32%;
+      }
+
+      .image-container img {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      .image-container img:hover {
+        opacity: 0;
+      }
+
+      .image-container .hover-image {
+        display: none;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      .image-container:hover .hover-image {
+        display: block;
+      }
+      input {
+        background-color: #f4f2f2;
+        border: black solid 1px;
+        color: rgb(0, 0, 0);
+        padding: 0.75em;
+        margin-bottom: 5%;
+        grid-column: 2;
+      }
+      button {
+        grid-column: 2;
+        text-align: left;
+        padding: 0.75em;
+        border-radius: 0px;
+        background-color: black;
+        border: solid 1px black;
+        color: white;
+        cursor: pointer;
+      }
+      button:hover {
+        background-color: #f4f2f2;
+        color: #ff0000;
+        border: solid 1px #ff0000;
+      }
+      .grid_1-5-1 {
+        display: grid;
+        grid-template-columns: 1fr 5fr 1fr;
+      }
+      .brodtekst2 {
+        margin: 10% 0% 10% 0%;
+      }
+    }
+    @media only screen and (min-width: 700px) {
+      .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+
+        text-align: center;
+        background-color: #f3f3eb;
+        font-family: century-gothic, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        padding: 1%;
+        line-height: 1.5em;
+        z-index: -1;
+      }
+      .no_res {
+        margin-top: 7%;
+      }
+      .aabningstider {
+        margin-top: 5%;
+      }
+      .hero-video {
+        mask: url("/mask.svg") no-repeat center / contain;
+        -webkit-mask: url("/mask.svg") no-repeat center / contain;
+        width: 100%;
+        margin: -6% 0% 0% 0%;
+        z-index: 1;
+      }
+      h1 {
+        font-family: "athena", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        text-align: center;
+        font-size: 57px;
+        line-height: 1.2em;
+      }
+      p {
+        font-family: century-gothic, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        text-align: center;
+      }
+      .brodtekst {
+        margin: 0% 10% 0% 10%;
+        line-height: 1.5em;
+      }
+      .grid_desktop {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+      }
+      img {
+        max-width: 100%;
+      }
+      .insta1,
+      .insta3 {
+        margin-left: 35%;
+        margin-right: 2%;
+      }
+      .insta1,
+      .insta2 {
+        width: 30%;
+        grid-column: 1;
+        margin-bottom: 2%;
+      }
+      .insta3,
+      .insta4 {
+        width: 30%;
+        grid-column: 1;
+        margin-bottom: 4%;
+      }
+      .feeling {
+        margin-right: 25%;
+        font-size: 57px;
+      }
+      .image-container {
+        position: relative;
+        width: 170px;
+        height: 140px;
+        margin: 7% 0% 0% 27%;
+      }
+
+      .image-container img {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      .image-container img:hover {
+        opacity: 0;
+      }
+
+      .image-container .hover-image {
+        display: none;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      .image-container:hover .hover-image {
+        display: block;
+      }
+      input {
+        background-color: #f4f2f2;
+        border: black solid 1px;
+        color: rgb(0, 0, 0);
+        padding: 1em;
+        margin: 0% 20% 0% 20%;
+      }
+      button {
+        text-align: left;
+        padding: 0.75em;
+        border-radius: 0px;
+        background-color: black;
+        border: solid 1px black;
+        color: white;
+        cursor: pointer;
+        margin-left: -36%;
+        margin-right: 100%;
+      }
+      button:hover {
+        background-color: #f4f2f2;
+        color: #ff0000;
+        border: solid 1px black;
+      }
+      .grid_1-5-1 {
+        display: grid;
+        grid-template-columns: 2fr 2fr 2fr 1fr;
+        margin-left: 5%;
+      }
+      .brodtekst2 {
+        font-size: 22px;
+        margin: 5% 25% 5% 25%;
+        line-height: 1.5em;
+      }
+      .rotate-image {
+        transform-origin: center center;
+        transition: transform 0.2s;
+        margin: 4% 0% 4% 70%;
+        width: 20%;
+      }
+      .rotate-image2 {
+        transform-origin: center center;
+        transition: transform 0.2s;
+        margin: -5% 0% -7% 4%;
+        width: 20%;
+      }
+    }
+  </style>
+  <script>
+    window.addEventListener("scroll", function () {
+      var rotation = window.pageYOffset / 3; // Adjust the divisor to control the rotation speed
+      var image = document.getElementById("my-image");
+      image.style.transform = "rotate(" + rotation + "deg)";
+    });
+    window.addEventListener("scroll", function () {
+      var rotation = window.pageYOffset / 3; // Adjust the divisor to control the rotation speed
+      var image = document.getElementById("my-image2");
+      image.style.transform = "rotate(" + rotation + "deg)";
+    });
+  </script>
 </html>
-<style>
-  .rotate-image {
-    transform-origin: center center;
-    transition: transform 0.2s;
-  }
-</style>
-<script>
-  window.addEventListener("scroll", function () {
-    var rotation = window.pageYOffset / 3; // Adjust the divisor to control the rotation speed
-    var image = document.getElementById("my-image");
-    image.style.transform = "rotate(" + rotation + "deg)";
-  });
-</script>
