ændringer i landing, header, footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,13 +30,12 @@
     background-color: #f3f3eb;
     padding: 3em;
     font-family: century-gothic, sans-serif;
-    font-weight: 400;
-    font-style: normal;
+    font-size: 16px;
     text-align: center;
     gap: 5rem;
   }
   .pompette_logo_black {
-    width: 80%;
+    width: 65%;
   }
   a {
     color: black;
