--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,37 +1,35 @@
-<header class="header">
-  <nav class="navbar">
-    <img src="/logo_roed.png" alt="pompette" />
-    <ul class="nav-menu">
-      <li class="nav-item">
-        <div class="dropdown">
-          <button class="dropbtn"> <a href="">Shop</a></button>
-          <div class="dropdown-content">
-            <a href="">Wine</a>
-            <a href="">Not wine</a>
-          </div>
+<nav class="navbar">
+  <img src="/logo_roed.png" alt="pompette" />
+  <ul class="nav-menu">
+    <li class="nav-item">
+      <div class="dropdown">
+        <button class="dropbtn"> <a href="">Shop</a></button>
+        <div class="dropdown-content">
+          <a href="">Wine</a>
+          <a href="">Not wine</a>
         </div>
-      </li>
-      <li class="nav-item">
-        <a href="">The Bar</a>
-      </li>
-      <li class="nav-item">
-        <div class="dropdown">
-          <button class="dropbtn"> <a href="">About Us</a></button>
-          <div class="dropdown-content">
-            <a href="">The Concept</a>
-            <a href="">The Winemakers</a>
-            <a href="">The People</a>
-          </div>
+      </div>
+    </li>
+    <li class="nav-item">
+      <a href="">The Bar</a>
+    </li>
+    <li class="nav-item">
+      <div class="dropdown">
+        <button class="dropbtn"> <a href="">About Us</a></button>
+        <div class="dropdown-content">
+          <a href="">The Concept</a>
+          <a href="">The Winemakers</a>
+          <a href="">The People</a>
         </div>
-      </li>
-    </ul>
-    <div class="hamburger">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
-  </nav>
-</header>
+      </div>
+    </li>
+  </ul>
+  <div class="hamburger">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+  </div>
+</nav>
 
 <style>
   .navbar {
@@ -47,14 +45,16 @@
     padding: 2em;
   }
   img {
-    width: 25%;
+    width: 20%;
+    margin-top: -2%;
   }
 
   ul {
     display: flex;
     list-style: none;
     justify-content: space-between;
-    margin-right: 5%;
+    margin-right: 15%;
+    margin-top: 3%;
   }
 
   a {
@@ -63,6 +63,7 @@
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-size: 16px;
+    line-height: 1.5;
   }
   a:hover {
     color: black;
@@ -91,7 +92,6 @@
     color: rgb(195, 195, 195);
     text-decoration: none;
     display: block;
-    margin-left: 1%;
   }
 
   .dropdown-content a:hover {
