--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,7 @@
 <nav class="navbar">
-  <img src="/logo_roed.png" alt="pompette" />
+  <a href="/">
+    <img src="/logo_roed.png" alt="pompette" />
+  </a>
   <ul class="nav-menu">
     <li class="nav-item">
       <div class="dropdown">
