--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,23 +5,23 @@
   <ul class="nav-menu">
     <li class="nav-item">
       <div class="dropdown">
-        <button class="dropbtn"> <a href="">Shop</a></button>
+        <button class="dropbtn"> <a href="/listeview">Shop</a></button>
         <div class="dropdown-content">
-          <a href="">Wine</a>
-          <a href="">Not wine</a>
+          <a href="/listeview">Wine</a>
+          <a href="/listeview">Not wine</a>
         </div>
       </div>
     </li>
     <li class="nav-item">
-      <a href="">The Bar</a>
+      <a href="/thebar">The Bar</a>
     </li>
     <li class="nav-item">
       <div class="dropdown">
-        <button class="dropbtn"> <a href="">About Us</a></button>
+        <button class="dropbtn"> <a href="/aboutus">About Us</a></button>
         <div class="dropdown-content">
-          <a href="">The Concept</a>
-          <a href="">The Winemakers</a>
-          <a href="">The People</a>
+          <a href="/aboutus">The Concept</a>
+          <a href="/aboutus">The Winemakers</a>
+          <a href="/aboutus">The People</a>
         </div>
       </div>
     </li>
