--- a/src/pages/singleview.astro
+++ b/src/pages/singleview.astro
@@ -11,8 +11,7 @@ import Footer from "../components/Footer.astro";
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
     <title>Singleview</title>
   </head>
-  <Header>
-  </Header>
+ <Header></Header>
  
     <main>
       <a href="listeview.astro" class="product">BACK</a>
@@ -41,7 +40,7 @@ import Footer from "../components/Footer.astro";
         </div>
       </div>
 </main>
-      <Footer></Footer>
+<Footer></Footer>
 <script>
 function changeImage(imageSrc) {
     var mainImage = document.getElementById('main-image');
@@ -52,6 +51,7 @@ function changeImage(imageSrc) {
    body{
     font-family: Poppins;
    }
+   h1{color: red;}
 img{width:50%;}
 .btn {
   display: inline-block;
