--- a/src/pages/aboutus.astro
+++ b/src/pages/aboutus.astro
@@ -1,5 +1,6 @@
 ---
-
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
@@ -12,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
   </head>
   <body>
-<h1>header </h1>
+<Header />
 <div class="section_1">
 <h2 class="citat1">“We want to make natural wine accessible for all people, keep it simple and at a good price.”</h2>
 <img class="billede1" src="thebar.png" alt="Billede">
@@ -51,6 +52,7 @@
     <p>Frederic Cossard, a visionary winemaker, is a true artisan of the vineyard. With a deep reverence for nature and a commitment to biodynamic principles, Cossard crafts wines that are a pure reflection of the land. His hands-on approach and meticulous attention to detail result in wines that are elegant, balanced, and filled with character. </p>
     <img src="winemaker4.png" alt="winemaker4">
 </div>
+<Footer />
   </body>
 
   <style>
