--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,9 +30,10 @@
     background-color: #f3f3eb;
     padding: 3em;
     font-family: century-gothic, sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     text-align: center;
     gap: 5rem;
+    line-height: 1.5em;
   }
   .pompette_logo_black {
     width: 60%;
@@ -49,6 +50,8 @@
       grid-template-columns: 1fr;
       justify-items: center;
       gap: 0.5rem;
+      line-height: 1.5em;
+      font-size: 14px;
     }
     .pompette_logo_black {
       width: 50%;
