--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,6 +90,7 @@ import Footer from "../components/Footer.astro";
         padding: 2%;
         line-height: 1.5em;
         z-index: -1;
+        font-size: 14px;
       }
       .no_res {
         display: none;
@@ -114,15 +115,21 @@ import Footer from "../components/Footer.astro";
         font-weight: 400;
         font-style: normal;
         text-align: center;
+        font-size: 45px;
+        line-height: 1.5em;
       }
       p {
         font-family: century-gothic, sans-serif;
         font-weight: 400;
         font-style: normal;
         text-align: center;
+        font-size: 14px;
+        line-height: 1.5em;
       }
       .brodtekst {
         margin: -3% 1% 15% 1%;
+        font-size: 14px;
+        line-height: 1.5em;
       }
       img {
         max-width: 100%;
@@ -190,9 +197,13 @@ import Footer from "../components/Footer.astro";
       .grid_1-5-1 {
         display: grid;
         grid-template-columns: 1fr 5fr 1fr;
+        line-height: 1.5em;
+        font-size: 14px;
       }
       .brodtekst2 {
         margin: 10% 0% 10% 0%;
+        line-height: 1.5em;
+        font-size: 14px;
       }
     }
     @media only screen and (min-width: 700px) {
@@ -204,6 +215,7 @@ import Footer from "../components/Footer.astro";
         font-family: century-gothic, sans-serif;
         padding: 1%;
         line-height: 1.5em;
+        font-size: 14px;
         z-index: -1;
         margin-left: -5%;
       }
@@ -229,27 +241,34 @@ import Footer from "../components/Footer.astro";
         font-style: normal;
         text-align: center;
         font-size: 57px;
-        line-height: 1.2em;
+        line-height: 1.5em;
       }
       p {
         font-family: century-gothic, sans-serif;
         font-weight: 400;
         font-style: normal;
         text-align: center;
+        line-height: 1.5em;
+        font-size: 14px;
       }
       .brodtekst {
         margin: 0% 25% 0% 25%;
         line-height: 1.5em;
+        font-size: 14px;
       }
       .grid_desktop {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        line-height: 1.5em;
+        font-size: 14px;
       }
       img {
         max-width: 100%;
       }
       a {
         text-decoration: none;
+        line-height: 1.5em;
+        font-size: 14px;
       }
       .insta1,
       .insta3 {
@@ -270,6 +289,7 @@ import Footer from "../components/Footer.astro";
       }
       .feeling {
         margin-right: 25%;
+        line-height: 1.5em;
       }
       .image-container {
         position: relative;
@@ -329,10 +349,12 @@ import Footer from "../components/Footer.astro";
         display: grid;
         grid-template-columns: 2fr 2fr 2fr 1fr;
         margin-left: 5%;
+        line-height: 1.5em;
+        font-size: 14px;
       }
       .brodtekst2 {
         margin: 5% 30% 5% 30%;
-
+        font-size: 14px;
         line-height: 1.5em;
       }
       .rotate-image {
